# dantalian

./: .gitignore  Cargo.toml  README.md  README_cn.md  build.rs  flake.nix  package.nix
.github/workflows/: build.yml  rust.yml
examples/jellyfin_nfo/: AIR S01E12.nfo  The Expanse S05E04.nfo  tvshow.nfo
examples/kodi_nfo/: tvshows.nfo
examples/media_root/[dantalian][202104][奇巧计程车ODD TAXI][01-13合集][BDRip][1080p]/: dantalian.toml
examples/media_root/ひぐらしのなく頃に 業/: dantalian.toml
examples/media_root/化物語 [2009][BDRip]/: dantalian.toml
examples/media_root/小魔女学园 [2017][TV]/: dantalian.toml
examples/media_root/进击的巨人 最终季/: dantalian.toml
examples/movie_source/シン・エヴァンゲリオン劇場版:│▌/: dantalian.toml
examples/movie_source/劇場版 SHIROBAKO/: dantalian.toml
examples/source/呪術廻戦 第2期/: dantalian.toml
examples/source/小魔女学园 [2017][TV]/: dantalian.toml
examples/source/無職転生Ⅱ/: dantalian.toml
src/: dantalian.rs  gui.rs  lib.rs  logger.rs  main.rs  options.rs
src/bangumi/: client.rs  mod.rs  types.rs
src/dantalian/: anime_dir.rs  config.rs  data.rs  dir.rs  job.rs  mod.rs  movie.rs  output.rs  utils.rs
src/nfogen/: generator.rs  mod.rs  nfo.rs
