[package]
name = "dantalian"
version = "0.3.3"
authors = ["Nanozuki Crows <nanozuki.crows@gmail.com>"]
edition = "2018"
description = "A nfo file generator for your anime. Source from https://bangumi.tv/."
license = "GPL-3.0-or-later"
repository = "https://github.com/nanozuki/dantalian/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
hyper = { version = "0.14.13", features = ["http1", "http2", "client", "runtime"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.44"
futures = "0.3.17"
percent-encoding = "2.1.0"
hyper-tls = "0.5.0"
tinytemplate = "1.2.1"
walkdir = "2.3.2"
regex = "1.5.4"
toml = "0.5.8"
log = "0.4.14"
once_cell = "1.8.0"
colored = "2.0.0"

[build-dependencies]
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
