[package]
name = "dantalian"
version = "0.4.2"
authors = ["Nanozuki Crows <nanozuki.crows@gmail.com>"]
edition = "2021"
description = "A nfo file generator for your anime. Source from https://bangumi.tv/."
license = "GPL-3.0-or-later"
repository = "https://github.com/nanozuki/dantalian/"
default-run = "dantalian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["hyper-tls/vendored"]
bin = []
gui = ["bin", "klask", "fontconfig"]
default = ["bin", "gui"]

[[bin]]
name = "dantalian"
path = "src/main.rs"
required-features = ["bin"]

[[bin]]
name = "dantalian-gui"
path = "src/gui.rs"
bench = false
required-features = ["gui"]

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo", "unicode", "wrap_help"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
hyper = { version = "0.14.19", features = ["http1", "http2", "client", "runtime"] }
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
percent-encoding = "2.1.0"
hyper-tls = "0.5.0"
tinytemplate = "1.2.1"
walkdir = "2.3.2"
regex = "1.5.6"
toml = "0.5.9"
log = "0.4.17"
once_cell = "1.12.0"
colored = "2.0.0"
fontconfig = { version = "0.5.0", features = ["dlopen"], optional = true }
klask = { version = "1.0.0", optional = true }

[build-dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo", "unicode", "wrap_help"] }
clap_complete = "3.1.4"
