[package]
name = "dantalian"
version = "0.4.4"
authors = ["Nanozuki Crows <nanozuki.crows@gmail.com>"]
edition = "2021"
description = "A nfo file generator for your anime. Source from https://bangumi.tv/."
license = "GPL-3.0-or-later"
repository = "https://github.com/nanozuki/dantalian/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["hyper-tls/vendored"]

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo", "unicode", "wrap_help"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_repr = "0.1.16"
hyper = { version = "0.14.18", features = ["http1", "http2", "client", "runtime"] }
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
hyper-tls = "0.5.0"
tinytemplate = "1.2.1"
walkdir = "2.3.2"
regex = "1.5.5"
toml = "0.5.9"
log = "0.4.17"
once_cell = "1.11.0"
colored = "2.0.0"

[build-dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo", "unicode", "wrap_help"] }
clap_complete = "3.1.4"
